--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -8,6 +9,9 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+        <!--Icon-->
+        <link rel="icon" href="{% static 'images/icon.png' %}">
 
         {% if title %}
 
@@ -25,22 +29,49 @@
 
         <div class="container">
 
-            <ul class="nav justify-content-end">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
 
-                <a class="navbar-brand justify-content-start">
-                    <img src="Assets/logoSmall.png" alt="#">
-                </a>
+                <a class="navbar-brand" href="{% url 'bookstore-home' %}"><img src="{% static 'images/logoSmall.png' %}"></a>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Log In</a>
-                </li>
-            </ul>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    
+                    <ul class="navbar-nav ml-auto">
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Log In</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'bookstore-books' %}">Books</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Cart</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </nav>
+
+            <div class="card bg-dark text-white mb-3 mt-3">
+                <img class="card-img" src="{% static 'images/books.png' %}" alt="Card image">
+                <div class="card-img-overlay">
+                    <h1 class="card-title">Team 7 Bookstore</h1>
+                    <p class="card-text">
+                        {% if title %}
+                            {{ title }}                 
+                        {% else %}
+                            Bookstore
+                        {% endif %}
+                    </p>
+
+                </div>
+            </div>
 
             {% block content %}
 
