added Create Customer Review button

--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -15,11 +15,11 @@
 
         {% if title %}
 
-            <title>Bookstore - {{ title }}</title>     
+            <title>GeekText - {{ title }}</title>     
         
         {% else %}
 
-            <title>Bookstore</title>
+            <title>GeekText</title>
 
         {% endif %}
 
