--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -66,7 +66,7 @@
                         {% if title %}
                             {{ title }}                 
                         {% else %}
-                            Bookstore
+                            GeekText
                         {% endif %}
                     </p>
 
