--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -50,7 +50,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cart</a>
+                            <a class="nav-link" href="{% url 'cart' %}">Cart</a>
                         </li>
 
                     </ul>
