--- a/bookstore/templates/books.html
+++ b/bookstore/templates/books.html
@@ -15,7 +15,7 @@
                 <small class="text-right font-weight-light">
                     Published on {{ book.datePublished }}
                 </small>
-                <form action="/create-review/">
+                <form action="/create-review">
                     <input type="submit" name="Create Customer Review" value="Create Customer Review"></input>
                 </form> 
             </li>
