--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -53,6 +53,10 @@
                             <a class="nav-link" href="{% url 'cart' %}">Cart</a>
                         </li>
 
+			<li class="nav-item">
+                            <a class="nav-link" href="{% url 'wishlist' %}">Wishlist</a>
+                        </li>
+
                     </ul>
 
                 </div>
