--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -42,7 +42,7 @@
                     <ul class="navbar-nav ml-auto">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Log In</a>
+                            <a class="nav-link" href="{% url 'login' %}">Log In</a>
                         </li>
 
                         <li class="nav-item">
