adding Add to Cart link
link that can be placed on any page (as in, product info page and with list) that when clicked will add selected book to cart. "book.id" will need to be re-named accordingly.

--- a/bookstore/templates/books.html
+++ b/bookstore/templates/books.html
@@ -18,6 +18,10 @@
                 <form action="/create-review">
                     <input type="submit" name="Create Customer Review" value="Create Customer Review"></input>
                 </form> 
+                
+                <!--ADD TO CART LINK. Once clicked it adds item to cart but "redirects" user to whatever page they were currently on/clicked from-->
+                <a href="{% url 'addtocart' book.id %}?from={{request.path|urlencode}}">Add to Cart</a>
+
             </li>
 
         {% endfor %}
