--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 {% block content %}
-
+<!--
     <div class="row justify-content-md-center">
         <div class="col col-lg-4">
 
@@ -29,5 +29,25 @@
             <button type="button" class="btn btn-success">Sign Up</button>
         </div>
     </div>
+-->
+
+<div class="content-section">
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Sign Up</legend>
+            {{ form.as_p }}
+        </fieldset>
+
+        <div class="from-group">
+            <button class="btn btn-outline-info" type="submit">Sign Up</button>
+        </div>
+
+        <div class="border-top pt-3">
+            <small>Already have an account?</small>
+            <button class="btn-primary">Log In</button>
+        </div>
+    </form>
+</div>
 
 {% endblock content %}
