users can check existing reviews and create their own

--- a/bookstore/templates/bookstore/books.html
+++ b/bookstore/templates/bookstore/books.html
@@ -15,10 +15,10 @@
                 <small class="text-right font-weight-light">
                     Published on {{ book.datePublished }}
                 </small>
-                <form action="/create-review">
-                    <input type="submit" name="Create Customer Review" value="Create Customer Review"></input>
-                </form> 
-                
+                <br>
+                <!--CHECK REVIEWS LINK. Once clicked it redirects user to the reviews page for that specific book-->
+                <a href="{% url 'reviews' book.id book.title %}">Check Reviews</a>
+                <br>
                 <!--ADD TO CART LINK. Once clicked it adds item to cart but "redirects" user to whatever page they were currently on/clicked from-->
                 <a href="{% url 'addtocart' book.id %}?from={{request.path|urlencode}}">Add to Cart</a>
 
