--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -1,11 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
 	<h1>Create a Review for {{ book_title }}!</h1>
+	<div class="form-group">
+		{% if messages %}
+		<ul classs="messages">
+			{% for message in messages %}
+			<li>
+				<div class="alert alert-{{message.tags}}"> {{ message }} </div>
+			</li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+	</div>
+
 	<form method="post">
 		{% csrf_token %}
 		{{ review_form.as_p}}
-		<input type="submit" value="Submit" class="btn btn-outline-success">
+		<input type="submit" value="Review" class="btn btn-outline-success">
 	</form>
+
 	<div class="main-content-section">
 		{{ reviews.count }} Review{{ reviews|pluralize }}
 		{% for review in reviews %}
