--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -23,7 +23,8 @@
 		{{ reviews.count }} Review{{ reviews|pluralize }}
 		{% for review in reviews %}
 			<blockquote class="blockquote">
-				<p class="mb-0">{{ review.content }}</p>
+				<p class="mb-0">Rating: {{ review.rating }} Star(s)</p>
+				<p class="mb-0">Review: {{ review.content }}</p>
 				<footer class="blockquote-footer"> by <cite title="Source Title">{{ review.author|capfirst }}</cite></footer>
 			</blockquote>
     	{% endfor %}
