users can now see average rating

--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -20,6 +20,8 @@
 	</form>
 
 	<div class="main-content-section">
+		Average Rating: {{ average_rating|floatformat:2 }}
+		<br>
 		{{ reviews.count }} Review{{ reviews|pluralize }}
 		{% for review in reviews %}
 			<blockquote class="blockquote">
