--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -10,6 +10,13 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
+        <!-- Optional JavaScript -->
+        <script>
+            $( document ).ready(function() {
+                $('#modal').modal('show')
+            });
+        </script>
+
         <!--Icon-->
         <link rel="icon" href="{% static 'images/icon.png' %}">
 
@@ -27,40 +34,65 @@
 
     <body>
 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+            <a class="navbar-brand" href="{% url 'bookstore-home' %}"><img src="{% static 'images/logoSmall.png' %}"></a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                
+                <ul class="navbar-nav ml-auto">
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'bookstore-books' %}">Books</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cart' %}">Cart</a>
+                    </li>
+
+                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'wishlist' %}">Wishlist</a>
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </nav>
+
         <div class="container">
 
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
-
-                <a class="navbar-brand" href="{% url 'bookstore-home' %}"><img src="{% static 'images/logoSmall.png' %}"></a>
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    
-                    <ul class="navbar-nav ml-auto">
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'signup' %}">Log In</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'bookstore-books' %}">Books</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'cart' %}">Cart</a>
-                        </li>
-
-			<li class="nav-item">
-                            <a class="nav-link" href="{% url 'wishlist' %}">Wishlist</a>
-                        </li>
-
-                    </ul>
-
-                </div>
-            </nav>
+            {% if messages %}
+                {% for message in messages %}
+                    <!-- Modal -->
+                    <div id="modal" class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalCenterTitle">{{message.tags}}!</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                </div>
+                                <div class="modal-body">
+                                {{message}}
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                {% endfor %}
+            {% endif %}
 
             <div class="card bg-dark text-white mb-3 mt-3">
                 <img class="card-img" src="{% static 'images/books.png' %}" alt="Card image">
@@ -83,12 +115,17 @@
 
         </div>
 
-        <!-- Optional JavaScript -->
+
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        
+        <!-- Optional JavaScript -->
+        <script>
+            $( document ).ready(function() {
+                $('#modal').modal('show')
+            });
+        </script>
     </body>
     
 </html>
