--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -1,51 +1,20 @@
 {% extends 'base.html'%}
+{% load crispy_forms_tags %}
 {% block content %}
-<!--
-    <div class="row justify-content-md-center">
-        <div class="col col-lg-4">
 
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroup-sizing-default">Email</span>
-                </div>
-                <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
-            </div>
-    
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroup-sizing-default">Password</span>
-                </div>
-                <input type="password" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
-            </div>
-
-        </div>
-    </div>
-
-    <div class="row justify-content-md-center">
-        <div class="col col-lg-2">
-            <button type="button" class="btn btn-primary ">Log In</button>
-        </div>
-        <div class="col col-lg-2">
-            <button type="button" class="btn btn-success">Sign Up</button>
-        </div>
-    </div>
--->
 
 <div class="content-section">
     <form method="POST">
         {% csrf_token %}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Sign Up</legend>
-            {{ form.as_p }}
-        </fieldset>
-
         <div class="from-group">
-            <button class="btn btn-outline-info" type="submit">Sign Up</button>
+            <legend>Sign Up</legend>
+            {{ form|crispy }}
+            <button class="btn btn-outline-info mb-3" type="submit">Sign Up</button>
         </div>
 
-        <div class="border-top pt-3">
+        <div class="border-top pt-3 mb-3">
             <small>Already have an account?</small>
-            <button class="btn-primary">Log In</button>
+            <button class="btn btn-primary">Log In</button>
         </div>
     </form>
 </div>
