--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -9,6 +9,7 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{% static 'css/review-style.css' %}">
 
         <!-- Optional JavaScript -->
         <script>
