--- a/bookstore/templates/bookstore/books.html
+++ b/bookstore/templates/bookstore/books.html
@@ -7,7 +7,7 @@
         {% for book in posts %}
 
             <li class="list-group-item">
-                <img src="{{ book.photo.url }}">
+                <img src="{{ book.photo.url }}" width = 100 height = 170>
 		<span class="font-weight-bold">
                     {{ book.title }}
                 </span>
