--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -60,7 +60,7 @@
                     </li>
 
                      <li class="nav-item">
-                        <a class="nav-link" href="{% url 'wishlist' %}">Wishlist</a>
+                        <a class="nav-link" href="{% url 'wishlists' %}">Wishlist</a>
                     </li>
 
                 </ul>
