--- a/bookstore/templates/bookstore/books.html
+++ b/bookstore/templates/bookstore/books.html
@@ -2,21 +2,35 @@
 {% block content %}
 {% load staticfiles %}
 
+<script type="text/javascript">
+
+    function resizeImage(id) {
+        var img = document.getElementById("img_"+id);
+        if(img.style.height ==="100%") {
+            img.style.height = "170px";
+            img.style.width = "100px";
+        } else {
+            img.style.height = "100%";
+            img.style.width = "100%";
+        }
+    }
+</script>
+
 <ul class="list-group"></ul>
 
 {% for book in posts %}
 
 <li class="list-group-item">
-    <img src="{{ book.photo.url }}" width=100 height=170>
+    <img id="img_{{ forloop.counter }}" src="{{ book.photo.url }}" width=100 height=170 onclick="resizeImage({{ forloop.counter }})">
     <span class="font-weight-bold">
                     {{ book.title }}
                 </span>
 
-    by {{ book.author }}
-
+    by {{ book.author }}, {{ book.genre }}
     <small class="text-right font-weight-light">
-        Published on {{ book.datePublished }}
+        Published on {{ book.datePublished }} by {{ book.publisher }}
     </small>
+    <div>{{ book.bookDescription }}</div>
     <br>
     <!--CHECK REVIEWS LINK. Once clicked it redirects user to the reviews page for that specific book-->
     <a href="{% url 'reviews' book.id book.title %}">Check Reviews</a>
