--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -18,7 +18,7 @@
 
                 <div class="border-top pt-3 mb-3">
                     <small>Already have an account?</small>
-                    <a class="mr-3 btn btn-primary" href="">Log In</a>
+                    <a class="mr-3 btn btn-primary" href="{% url 'login' %}">Log In</a>
                 </div>
             </form>
         </div>
