--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -18,7 +18,7 @@
 
                 <div class="border-top pt-3 mb-3">
                     <small>Don't have an account?</small>
-                    <button class="mr-3 btn btn-primary">Sign Up</button>
+                    <a class="mr-3 btn btn-primary" href="{% url 'signup' %}">Sign Up</a>
                 </div>
             </form>
         </div>
