--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -47,6 +47,15 @@
                 
                 <ul class="navbar-nav ml-auto">
 
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{% url 'login' %}">Log In</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'signup' %}">Sign Up</a>
+                        </div>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
                     </li>
