--- a/bookstore/templates/bookstore/home.html
+++ b/bookstore/templates/bookstore/home.html
@@ -1,4 +1,57 @@
 {% extends 'base.html'%}
+{% load staticfiles %}
 {% block content %}
+
+
+<ul class="list-group"></ul>
+
+{% for book in posts %}
+
+
+<div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Cras justo odio</li>
+          <li class="list-group-item">Dapibus ac facilisis in</li>
+          <li class="list-group-item">Vestibulum at eros</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>
+        </div>
+      </div>
+
+
+<li class="list-group-item">
+    <img id="img_{{ forloop.counter }}" src="{{ book.photo.url }}" width=100 height=170 onclick="resizeImage({{ forloop.counter }})">
+    <span class="font-weight-bold">
+                    {{ book.title }}
+                </span>
+
+    by {{ book.author }}, {{ book.genre }}
+    <small class="text-right font-weight-light">
+        Published on {{ book.datePublished }} by {{ book.publisher }}
+    </small>
+    <div>{{ book.bookDescription }}</div>
+    <br>
+    <br>
+    <div class="font-weight-bold">{{ book.author }}</div>
+    <div>{{ book.author.biography }}</div>
+    <br>
+    <!--CHECK REVIEWS LINK. Once clicked it redirects user to the reviews page for that specific book-->
+    <a href="{% url 'reviews' book.id book.title %}">Check Reviews</a>
+    <br>
+    <!--ADD TO CART LINK. Once clicked it adds item to cart but "redirects" user to whatever page they were currently on/clicked from-->
+    <a href="{% url 'addtocart' book.id %}?from={{request.path|urlencode}}">Add to Cart</a>
+
+</li>
+
+{% endfor %}
+
+</ul>
     
 {% endblock content %}
