--- a/bookstore/templates/bookstore/books.html
+++ b/bookstore/templates/bookstore/books.html
@@ -27,7 +27,9 @@
                     {{ book.title }}
                 </span>
 <div>
-    by {{ book.author }}, {{ book.genre }}
+    by {{ book.author }}
+<div>
+	{{ book.genre }}
 <div>
         Published on {{ book.datePublished }}
 <div>
