--- a/bookstore/templates/bookstore/home.html
+++ b/bookstore/templates/bookstore/home.html
@@ -1,57 +1,46 @@
 {% extends 'base.html'%}
 {% load staticfiles %}
+
 {% block content %}
 
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome!</h1>
+        <hr class="my-4">
+        <p>Sign up or Login below.</p>
+        <p class="lead">
+            <div class="row">
+                <a class="btn btn-success btn-lg mr-3" href="{% url 'signup' %}" role="button">Sign Up</a>
+                <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Log In</a>
+            </div>
+        </p>
+    </div>
 
-<ul class="list-group"></ul>
+    <div class="text-center">
+        {% for book in books %}
 
-{% for book in posts %}
+        <div class="card mb-3">
+                <div class="row no-gutters">
+                    <div class="col-auto text-center  mx-auto d-block">
+                        <img src="{{ book.photo.url }}" class="img-fluid" style="width: 15rem;height: 22rem;" alt=" {{ book.title }} ">
+                    </div>
+                    <div class="col-sm card">
+                            <div class="card-body text-left">
+                                <h4 class="card-title">{{book.title}}</h4>
+                                <p class="card-text"><small> By {{book.author}}, {{ book.genre }}</small></p>
+                                <h6 class="card-title">Synopsis</h6>
+                                <p class="card-text"><small> {{book.bookDescription}}</small></p>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text text-left"><small class="text-left font-muted">Published on {{ book.datePublished }} by {{ book.publisher }}</small></p> 
+                            </div>
+                    </div>
+                </div>
+          </div>
+
+        {% endfor %}
+    </div>
 
 
-<div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Vestibulum at eros</li>
-        </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
+</div>
 
-
-<li class="list-group-item">
-    <img id="img_{{ forloop.counter }}" src="{{ book.photo.url }}" width=100 height=170 onclick="resizeImage({{ forloop.counter }})">
-    <span class="font-weight-bold">
-                    {{ book.title }}
-                </span>
-
-    by {{ book.author }}, {{ book.genre }}
-    <small class="text-right font-weight-light">
-        Published on {{ book.datePublished }} by {{ book.publisher }}
-    </small>
-    <div>{{ book.bookDescription }}</div>
-    <br>
-    <br>
-    <div class="font-weight-bold">{{ book.author }}</div>
-    <div>{{ book.author.biography }}</div>
-    <br>
-    <!--CHECK REVIEWS LINK. Once clicked it redirects user to the reviews page for that specific book-->
-    <a href="{% url 'reviews' book.id book.title %}">Check Reviews</a>
-    <br>
-    <!--ADD TO CART LINK. Once clicked it adds item to cart but "redirects" user to whatever page they were currently on/clicked from-->
-    <a href="{% url 'addtocart' book.id %}?from={{request.path|urlencode}}">Add to Cart</a>
-
-</li>
-
-{% endfor %}
-
-</ul>
-    
 {% endblock content %}
