--- a/cart/templates/carthome.html
+++ b/cart/templates/carthome.html
@@ -33,6 +33,12 @@
 
 <h4 align="right"><font color="green">Total:</font> $ {{nonemptycart.total}}</h4>
 
+<p></p>
+
+
+<h4 align="right"><a href="{% url 'purchaseitems' %}"><button>Purchase</button></a></h4>
+
+
 {% endif %}
 
 {% endblock %}
